force-app/main/default/objects/LPCR_RevenueCascade__c/LPCR_RevenueCascade__c.object-meta.xml
<CustomObject>
    <label>Revenue Cascade</label>
    <nameField>
        <label>Revenue Cascade Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Revenues Cascade</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>