force-app/main/default/objects/LPCR_RevenueCascade__c/fields/ADV__c.field-meta.xml
<CustomField>
    <fullName>ADV__c</fullName>
    <formula>LPCR_Contrat__r.LPCR_ResponsableADV__r.FirstName&amp; &quot; &quot; &amp;  LPCR_Contrat__r.LPCR_ResponsableADV__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ADV</label>
    <type>Text</type>
</CustomField>