force-app/main/default/objects/LPCR_RevenueCascade__c/fields/LPCR_Client__c.field-meta.xml
<CustomField>
    <fullName>LPCR_Client__c</fullName>
    <formula>LPCR_Contrat__r.Account.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Client</label>
    <type>Text</type>
</CustomField>