force-app/main/default/objects/LPCR_RevenueCascade__c/fields/LPCR_Compte__c.field-meta.xml
<CustomField>
    <fullName>LPCR_Compte__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Revenues Cascade</relationshipLabel>
    <relationshipName>Revenues_Cascade</relationshipName>
    <type>Lookup</type>
</CustomField>