force-app/main/default/objects/LPCR_RevenueCascade__c/fields/LPCR_CompteCreche__c.field-meta.xml
<CustomField>
    <fullName>LPCR_CompteCreche__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Compte Crèche</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Revenues Cascade (Compte Crèche)</relationshipLabel>
    <relationshipName>Revenues_Cascade1</relationshipName>
    <type>Lookup</type>
</CustomField>