force-app/main/default/objects/LPCR_RevenueCascade__c/fields/LPCR_CompteGeneral__c.field-meta.xml
<CustomField>
    <fullName>LPCR_CompteGeneral__c</fullName>
    <formula>LPCR_Contrat__r.Account.LCPR_CompteAnalytiqueClient__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Compte Général</label>
    <type>Text</type>
</CustomField>