force-app/main/default/objects/LPCR_RevenueCascade__c/fields/LPCR_Contrat__c.field-meta.xml
<CustomField>
    <fullName>LPCR_Contrat__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contrat</label>
    <referenceTo>Contract</referenceTo>
    <relationshipLabel>Revenues Cascade</relationshipLabel>
    <relationshipName>Revenues_Cascade</relationshipName>
    <type>Lookup</type>
</CustomField>