force-app/main/default/objects/LPCR_RevenueCascade__c/fields/LPCR_CreditNoteLineAggregation__c.field-meta.xml
<CustomField>
    <fullName>LPCR_CreditNoteLineAggregation__c</fullName>
    <label>Aggrégation Montant de Note de Crédit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>