force-app/main/default/objects/LPCR_RevenueCascade__c/fields/LPCR_CreditNoteRevenue__c.field-meta.xml
<CustomField>
    <fullName>LPCR_CreditNoteRevenue__c</fullName>
    <label>Credit Note Revenue(Theoretical Credit N</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>