force-app/main/default/objects/LPCR_RevenueCascade__c/fields/LPCR_DateDebut__c.field-meta.xml
<CustomField>
    <fullName>LPCR_DateDebut__c</fullName>
    <label>Start Date as date field</label>
    <type>Date</type>
</CustomField>