force-app/main/default/objects/LPCR_RevenueCascade__c/fields/LPCR_DateDebutContrat__c.field-meta.xml
<CustomField>
    <fullName>LPCR_DateDebutContrat__c</fullName>
    <formula>LPCR_Contrat__r.LPCR_DateDebut__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Date de début</label>
    <type>Date</type>
</CustomField>