force-app/main/default/objects/LPCR_RevenueCascade__c/fields/LPCR_DateFin__c.field-meta.xml
<CustomField>
    <fullName>LPCR_DateFin__c</fullName>
    <formula>LPCR_Contrat__r.LPCR_DateFin__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Date de fin</label>
    <type>Date</type>
</CustomField>