force-app/main/default/objects/LPCR_RevenueCascade__c/fields/LPCR_FAE__c.field-meta.xml
<CustomField>
    <fullName>LPCR_FAE__c</fullName>
    <formula>IF( LPCR_MontantFacture__c &lt; LPCR_RevenueTheorique__c, (LPCR_RevenueTheorique__c - LPCR_MontantFacture__c), 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>FAE</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>