force-app/main/default/objects/LPCR_RevenueCascade__c/fields/LPCR_FrequenceFacturation__c.field-meta.xml
<CustomField>
    <fullName>LPCR_FrequenceFacturation__c</fullName>
    <formula>TEXT( LPCR_Contrat__r.LPCR_BillingFrequency__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fréquence de Facturation</label>
    <type>Text</type>
</CustomField>