force-app/main/default/objects/LPCR_RevenueCascade__c/fields/LPCR_IdConvention__c.field-meta.xml
<CustomField>
    <fullName>LPCR_IdConvention__c</fullName>
    <formula>LPCR_Contrat__r.LPCR_NumeroContrat__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Id Convention</label>
    <type>Text</type>
</CustomField>