force-app/main/default/objects/LPCR_RevenueCascade__c/fields/LPCR_IdCreche__c.field-meta.xml
<CustomField>
    <fullName>LPCR_IdCreche__c</fullName>
    <formula>LPCR_Contrat__r.LPCR_Creche__r.Name &amp; &quot;- &quot; &amp;  LPCR_Contrat__r.LPCR_Creche__r.LCPR_IDCompteCreche__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Id Crèche</label>
    <type>Text</type>
</CustomField>