force-app/main/default/objects/LPCR_RevenueCascade__c/fields/LPCR_MontantFacture__c.field-meta.xml
<CustomField>
    <fullName>LPCR_MontantFacture__c</fullName>
    <label>Montant Facturé</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>