force-app/main/default/objects/LPCR_RevenueCascade__c/fields/LPCR_NombreMois__c.field-meta.xml
<CustomField>
    <fullName>LPCR_NombreMois__c</fullName>
    <label>Nombre Mois</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>