force-app/main/default/objects/LPCR_RevenueCascade__c/fields/LPCR_OrderInvoiceRevenue__c.field-meta.xml
<CustomField>
    <fullName>LPCR_OrderInvoiceRevenue__c</fullName>
    <label>Revenu Théorique Commande/Facture</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>