force-app/main/default/objects/LPCR_RevenueCascade__c/fields/LPCR_OrderLineAggregation__c.field-meta.xml
<CustomField>
    <fullName>LPCR_OrderLineAggregation__c</fullName>
    <label>Order Line Amount Aggregation</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>