force-app/main/default/objects/LPCR_RevenueCascade__c/fields/LPCR_OrderLineGroup__c.field-meta.xml
<CustomField>
    <fullName>LPCR_OrderLineGroup__c</fullName>
    <label>Order Line Group Field as text</label>
    <length>60</length>
    <type>Text</type>
</CustomField>