force-app/main/default/objects/LPCR_RevenueCascade__c/fields/LPCR_PCA__c.field-meta.xml
<CustomField>
    <fullName>LPCR_PCA__c</fullName>
    <formula>IF( LPCR_RevenueTheorique__c &lt; LPCR_MontantFacture__c, (LPCR_MontantFacture__c - LPCR_RevenueTheorique__c), 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PCA</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>