force-app/main/default/objects/LPCR_RevenueCascade__c/fields/LPCR_PrixAnnuel__c.field-meta.xml
<CustomField>
    <fullName>LPCR_PrixAnnuel__c</fullName>
    <label>Prix Annuel</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>