force-app/main/default/objects/LPCR_RevenueCascade__c/fields/LPCR_RevenueTheorique__c.field-meta.xml
<CustomField>
    <fullName>LPCR_RevenueTheorique__c</fullName>
    <formula>ROUND(LPCR_OrderInvoiceRevenue__c,2) - LPCR_CreditNoteLineAggregation__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Revenu Théorique</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>