force-app/main/default/objects/LPCR_RevenueCascade__c/fields/LPCR_Societe__c.field-meta.xml
<CustomField>
    <fullName>LPCR_Societe__c</fullName>
    <formula>LPCR_CompteCreche__r.Parent.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Soc</label>
    <type>Text</type>
</CustomField>