force-app/main/default/objects/LPCR_RevenueCascade__c/fields/LPCR_TypeFacturation__c.field-meta.xml
<CustomField>
    <fullName>LPCR_TypeFacturation__c</fullName>
    <formula>Text(LPCR_Contrat__r.LPCR_TypeFacturation__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Type Facturation</label>
    <type>Text</type>
</CustomField>